--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,10 +12,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install LLVM/Clang
-        uses: llvm/llvm-project/utils/gha/install-llvm-action@main
-        with:
-          components: "clang"
+      - name: Install clang
+        run: sudo apt-get update && sudo apt-get install -y clang
 
       - name: Run make
         run: make
